deploy: b3dbf1ef3f034487e2964499c005ca38fb186299

--- a/404.html
+++ b/404.html
@@ -75,9 +75,11 @@
    --><!--
      --><li><a href="/about/">About</a></li><!--
    --><!--
-     --><li><a href="/archives/">Writing</a></li><!--
+     --><li><a href="/archives/">posts</a></li><!--
    --><!--
-     --><li><a target="_blank" rel="noopener" href="http://github.com/probberechts">Projects</a></li><!--
+     --><li><a href="/categories/">categories</a></li><!--
+   --><!--
+     --><li><a href="/tags/">tags</a></li><!--
    -->
     </ul>
   </div>
@@ -100,7 +102,7 @@
     Copyright &copy;
     
     
-    2016-2022
+    2022
     iasnobmatsu
   </div>
   <div class="footer-right">
@@ -111,9 +113,11 @@
      --><!--
        --><li><a href="/about/">About</a></li><!--
      --><!--
-       --><li><a href="/archives/">Writing</a></li><!--
+       --><li><a href="/archives/">posts</a></li><!--
      --><!--
-       --><li><a target="_blank" rel="noopener" href="http://github.com/probberechts">Projects</a></li><!--
+       --><li><a href="/categories/">categories</a></li><!--
+     --><!--
+       --><li><a href="/tags/">tags</a></li><!--
      -->
       </ul>
     </nav>
