--- a/404.html
+++ b/404.html
@@ -75,11 +75,11 @@
    --><!--
      --><li><a href="/about/">About</a></li><!--
    --><!--
-     --><li><a href="/archives/">posts</a></li><!--
+     --><li><a href="/archives/">Posts</a></li><!--
    --><!--
-     --><li><a href="/categories/">categories</a></li><!--
+     --><li><a href="/categories/">Categories</a></li><!--
    --><!--
-     --><li><a href="/tags/">tags</a></li><!--
+     --><li><a href="/tags/">Tags</a></li><!--
    -->
     </ul>
   </div>
@@ -113,11 +113,11 @@
      --><!--
        --><li><a href="/about/">About</a></li><!--
      --><!--
-       --><li><a href="/archives/">posts</a></li><!--
+       --><li><a href="/archives/">Posts</a></li><!--
      --><!--
-       --><li><a href="/categories/">categories</a></li><!--
+       --><li><a href="/categories/">Categories</a></li><!--
      --><!--
-       --><li><a href="/tags/">tags</a></li><!--
+       --><li><a href="/tags/">Tags</a></li><!--
      -->
       </ul>
     </nav>
