--- a/404.html
+++ b/404.html
@@ -81,6 +81,7 @@
    --><!--
      --><li><a href="/tags/">Tags</a></li><!--
    -->
+    <li><a href="/search/"><i class="fa-solid fa-magnifying-glass"></i></a></li>
     </ul>
   </div>
 </header>
@@ -104,6 +105,7 @@
     
     2022
     iasnobmatsu
+   
   </div>
   <div class="footer-right">
     <nav>
@@ -119,6 +121,7 @@
      --><!--
        --><li><a href="/tags/">Tags</a></li><!--
      -->
+          <li><a href="/search/"><i class="fa-solid fa-magnifying-glass"></i></a></li>
       </ul>
     </nav>
   </div>
@@ -129,7 +132,7 @@
 
 
 
-  <link rel="preload" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" crossorigin="anonymous" onload="this.onload=null;this.rel='stylesheet'"/>
+  <link rel="preload" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" crossorigin="anonymous" onload="this.onload=null;this.rel='stylesheet'"/>
 
 
 
