--- a/about/index.html
+++ b/about/index.html
@@ -85,6 +85,7 @@
    --><!--
      --><li><a href="/tags/">Tags</a></li><!--
    -->
+    <li><a href="/search/"><i class="fa-solid fa-magnifying-glass"></i></a></li>
     </ul>
   </div>
 </header>
@@ -110,6 +111,7 @@
     
     2022
     iasnobmatsu
+   
   </div>
   <div class="footer-right">
     <nav>
@@ -125,6 +127,7 @@
      --><!--
        --><li><a href="/tags/">Tags</a></li><!--
      -->
+          <li><a href="/search/"><i class="fa-solid fa-magnifying-glass"></i></a></li>
       </ul>
     </nav>
   </div>
@@ -135,7 +138,7 @@
 
 
 
-  <link rel="preload" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" crossorigin="anonymous" onload="this.onload=null;this.rel='stylesheet'"/>
+  <link rel="preload" as="style" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" crossorigin="anonymous" onload="this.onload=null;this.rel='stylesheet'"/>
 
 
 
