--- a/about/index.html
+++ b/about/index.html
@@ -62,7 +62,7 @@
   <a href="/">
   
     
-      <div id="logo" style="background-image: url(/images/logo.png);"></div>
+      <div id="logo" style="background-image: url(/images/logo-transp.png);"></div>
     
   
     <div id="title">
